tests/fixtures/positive/release-engineering/test-fixture-accessed-from-production/app/src/main/kotlin/com/example/FullyQualifiedProd.kt
package com.example

class FullyQualifiedProd {
    val user = com.example.fixtures.FakeUser()
}

